Ipe 7.2.29

 * Fix symbol snap points not scaling with symbol size (bug #486).

 * Fix edges not always following when a node is moved (bug #487).

 * Interpret strings in PDF documents that are in UTF-16 (ipepresenter
   bug #11).

 * Fix Latex not being run automatically after paste (# 497).

 * Cleanup Qt version of wait dialog (when Latex runs), using an
   explicit mutex.

----------------------------------------------------------------------

Ipe 7.2.28 (2023-08-13)

 * Add "sequential text" option.

 * Fix centering of title in presentation stylesheet (bug #464).

 * Link to manual and Ipelib documentation online instead of
   installing it locally by default.

 * Add "-tolerance" option to iperender (#461).

 * Store document language to enable appropriate spell checking
   (#451).

 * Fix HiDPI handling on Qt6 (#470).

 * Fix error editing arcs (#472).

 * Fix error editing ellipses (#473).

 * Show error message during startup on Windows when Ipe was installed
   on a path containing accented characters (or anything else not in
   ASCII) (#467).

 * Show error message when parsing an Ipe file containing a singular
   ellipse (#437).

 * Don't perform stretch transformation that would create a singular
   transformation matrix (#477).
 
----------------------------------------------------------------------

Ipe 7.2.27 (2023-05-05)

 * On Linux, migrate to Qt6 (#457).  Thanks Henri!

 * Change behaviour of transform tools to never switch the current
   selection (#459).

 * Action to deselect everything on current page.

 * Align center/H center/V center now aligns to the page if
   only one object selected (#449).

 * Fix absolute autosave paths (bug #433).

 * Add /opt/homebrew/bin to path on MacOS (#440).

 * Fix missing 'stroke-opacity' and 'opacity' attributes in
   'ipe.dtd' (#67).

 * Fix crash when 'recent_files_lua' ends up empty (bug #455).

 * Fix missing page numbers when there is no text (bug #450).
